// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalContainer matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-display-6koalj r-flexDirection-18u37iz r-position-bnwqim r-width-13qz1uu"
  >
    Testing
  </div>
</div>
`;

exports[`ModalContainer matches snapshot with properties 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-display-6koalj r-flexDirection-18u37iz r-position-bnwqim r-width-13qz1uu"
    style={
      Object {
        "WebkitBoxFlex": 1,
        "WebkitFlexGrow": 1,
        "flexGrow": 1,
        "msFlexPositive": 1,
      }
    }
  >
    Testing
  </div>
</div>
`;
